# superfan

./: AGENTS.md  CONTEXT.md  CONVERSION_PLAN.md  README.md  package-lock.json  package.json  vite.config.ts
.github/workflows/: build-macos.yml  release.yml
Casks/: superfan.rb
docs/: ARCHITECTURE.md
docs/adr/: 0001-privileged-fan-actuation.md  0002-rust-owned-hardware-telemetry-snapshot.md  0003-rust-owned-thermal-policy.md  0004-rust-owned-application-preferences.md  0005-administrator-installed-fan-actuation-helper.md
scripts/: build-dmg.sh  generate-types.sh  stage-fan-actuation-daemon.sh  verify-fan-actuation-bundle.sh
src/: App.tsx  index.css  types.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/bindings/: ApplicationPreferenceChange.ts  ApplicationPreferences.ts  BatteryReading.ts  FanActuationStatus.ts  FanPlan.ts  FanReading.ts  FanTarget.ts  HardwareTelemetrySnapshot.ts  ThermalPolicySettings.ts
src-tauri/bundle/macos/LaunchDaemons/: com.superfan.fan-actuation.plist
src-tauri/bundle/macos/fan-actuation/: authorize-install.applescript  com.superfan.fan-actuation.plist  install-fan-actuation.sh
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/application_preferences/: adapters.rs  cadence.rs  contract.rs  mod.rs  preferences.rs
src-tauri/src/fan_actuation/: bootstrap.rs  client.rs  console_user.rs  installer.rs  lease.rs  migration.rs  mod.rs  protocol.rs  service_management.h  service_management.m  smc_adapter.rs  socket.rs
src-tauri/src/hardware_telemetry/: contract.rs  mod.rs  snapshot.rs
src-tauri/src/hardware_telemetry/adapters/: fixture.rs  iokit.rs  mod.rs  smc.rs
src-tauri/src/smc/: mod.rs  smc.c  smc.h
src-tauri/src/thermal_policy/: adapters.rs  contract.rs  evaluator.rs  mod.rs  runtime.rs  settings.rs  state.rs
src/components/: BatteryCard.tsx  CoreBreakdown.tsx  FanCard.tsx  (+6 more)
(+1 files in other folders)
