[package]
name = "superfan"
default-run = "superfan"
version = "1.2.2"
description = "SuperFan - High-performance Fan Control & Temperature Monitor for macOS"
authors = ["beowulf"]
edition = "2021"
autobins = false

[features]
daemon-bin = []

[[bin]]
name = "superfan"
path = "src/main.rs"

[[bin]]
name = "fan-actuation-daemon"
path = "src/bin/fan-actuation-daemon.rs"
required-features = ["daemon-bin"]

[lib]
name = "superfan_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }
cc = "1.0"

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png", "macos-private-api"] }
tauri-plugin-opener = "2"
tauri-plugin-autostart = "2"
tauri-plugin-store = "2"
tauri-plugin-positioner = { version = "2", features = ["tray-icon"] }
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
libc = "0.2"
tokio = { version = "1", features = ["full", "test-util"] }
ts-rs = "12"
